renamed *.TXT to *.txt
 SVN 7875@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -438,7 +438,7 @@ designer/designer.pp svneol=native#text/pascal
 designer/designermenu.pp svneol=native#text/pascal
 designer/designerprocs.pas svneol=native#text/pascal
 designer/filesystem.pp svneol=native#text/pascal
-designer/jitform/README.TXT svneol=native#text/plain
+designer/jitform/README.txt svneol=native#text/plain
 designer/jitform/jitform.pas svneol=native#text/pascal
 designer/jitforms.pp svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
@@ -677,7 +677,7 @@ examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
 examples/edittest.lpi svneol=native#text/plain
 examples/edittest.pp svneol=native#text/pascal
-examples/exploremenu/README.TXT svneol=native#text/plain
+examples/exploremenu/README.txt svneol=native#text/plain
 examples/exploremenu/exploreidemenu.lpk svneol=native#text/plain
 examples/exploremenu/exploreidemenu.pas svneol=native#text/plain
 examples/exploremenu/frmexploremenu.lfm svneol=native#text/plain
@@ -1420,6 +1420,7 @@ languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ruutf.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
+lcl/LAYOUT.txt svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
 lcl/arrow.pp svneol=native#text/pascal
@@ -1622,6 +1623,7 @@ lcl/include/winapih.inc svneol=native#text/pascal
 lcl/include/wincontrol.inc svneol=native#text/pascal
 lcl/inipropstorage.pas svneol=native#text/pascal
 lcl/interfacebase.pp svneol=native#text/pascal
+lcl/interfaces/LAYOUT.txt svneol=native#text/plain
 lcl/interfaces/carbon/carbondef.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonextra.pas svneol=native#text/pascal
 lcl/interfaces/carbon/carbonimages.lrs svneol=native#text/pascal
@@ -1923,6 +1925,7 @@ lcl/tests/test2_2labelattributes.lpi svneol=native#text/plain
 lcl/tests/test2_2labelattributes.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
+lcl/units/CONTENT.txt svneol=native#text/plain
 lcl/utrace.pp svneol=native#text/pascal
 lcl/widgetset/wsactnlist.pp svneol=native#text/pascal
 lcl/widgetset/wsarrow.pp svneol=native#text/pascal
