--- a/tools/Makefile.fpc
+++ b/tools/Makefile.fpc
@@ -41,7 +41,7 @@ export LCL_PLATFORM
 
 all: apiwizz_all
         $(MAKE) --assume-new=lazres.pp lazres$(EXEEXT)
-        $(MAKE) --assume-new=svn2revisioninc.pas svn2revisioninc.pas$(EXEEXT)
+        $(MAKE) --assume-new=svn2revisioninc.pas svn2revisioninc$(EXEEXT)
         $(MAKE) --assume-new=updatepofiles.pas updatepofiles$(EXEEXT)
 
 # end.
