added make tools to lazarus spec file
 SVN 7889@trunk

--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -29,6 +29,7 @@ if [ -n "$FPCCfg" ]; then
   MAKEOPTS="$MAKEOPTS -n @$FPCCfg"
 fi
 make OPT="$MAKEOPTS"
+make tools
 strip lazarus
 strip startlazarus
 
