--- a/.gitattributes
+++ b/.gitattributes
@@ -1631,6 +1631,9 @@ lcl/interfaces/carbon/carbonint.pas svneol=native#text/pascal
 lcl/interfaces/carbon/carbonlclintf.inc svneol=native#text/plain
 lcl/interfaces/carbon/carbonlclintfh.inc svneol=native#text/plain
 lcl/interfaces/carbon/carbonobject.inc svneol=native#text/plain
+lcl/interfaces/carbon/carbonprivate.pp svneol=native#text/pascal
+lcl/interfaces/carbon/carbonprivatehiview.inc svneol=native#text/pascal
+lcl/interfaces/carbon/carbonprivatewindow.inc svneol=native#text/pascal
 lcl/interfaces/carbon/carbonproc.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonutils.pas svneol=native#text/pascal
 lcl/interfaces/carbon/carbonwinapi.inc svneol=native#text/plain
