--- a/.gitattributes
+++ b/.gitattributes
@@ -917,6 +917,8 @@ ide/mainbase.pas svneol=native#text/pascal
 ide/mainintf.pas svneol=native#text/pascal
 ide/makeresstrdlg.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
+ide/msgview.lfm svneol=native#text/plain
+ide/msgview.lrs svneol=native#text/plain
 ide/msgview.pp svneol=native#text/pascal
 ide/msgvieweditor.lfm svneol=native#text/plain
 ide/msgvieweditor.lrs svneol=native#text/pascal
