converted new dialog to lfm  from Darius
 SVN 7911@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -926,6 +926,8 @@ ide/msgvieweditor.pas svneol=native#text/pascal
 ide/multireplacedlg.lfm svneol=native#text/plain
 ide/multireplacedlg.lrs svneol=native#text/pascal
 ide/multireplacedlg.pas svneol=native#text/pascal
+ide/newdialog.lfm svneol=native#text/plain
+ide/newdialog.lrs svneol=native#text/plain
 ide/newdialog.pas svneol=native#text/pascal
 ide/newprojectdlg.pp svneol=native#text/pascal
 ide/objectlists.pas svneol=native#text/pascal
