added prettyformat package for IDE beautification features  from Michael VC
 SVN 7920@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -145,6 +145,10 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/prettyformat/pfidesource.pas svneol=native#text/plain
+components/prettyformat/prettyformat.lpk svneol=native#text/plain
+components/prettyformat/prettyformat.pas svneol=native#text/plain
+components/prettyformat/ptopu.pp svneol=native#text/plain
 components/printers/linux/cupsdyn.pp svneol=native#text/pascal
 components/printers/linux/cupsprinters.inc svneol=native#text/pascal
 components/printers/linux/cupsprinters_h.inc svneol=native#text/pascal
