--- a/.gitattributes
+++ b/.gitattributes
@@ -1962,6 +1962,7 @@ packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
 packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
+packager/globallinks/prettyformat-0.lpl svneol=native#text/plain
 packager/globallinks/projtemplates-0.lpl svneol=native#text/plain
 packager/installpkgsetdlg.lfm svneol=native#text/plain
 packager/installpkgsetdlg.lrs svneol=native#text/pascal
