--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -107,6 +107,8 @@ endif
 
 #-----------------------------------------------------------------------------
 ide: $(COMPILER_UNITTARGETDIR)
+#	$(MAKE) -C ../tools svn2revisioninc$(EXEEXT)
+	../tools/svn2revisioninc$(EXEEXT) .. revision.inc
 ifeq ($(OS_TARGET), win32)
         $(MAKE) lazarus.res
 endif
