implemented creating svn2revisioninc, if it doesn't exist.
 SVN 7927@trunk

--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -107,7 +107,9 @@ endif
 
 #-----------------------------------------------------------------------------
 ide: $(COMPILER_UNITTARGETDIR)
-#	$(MAKE) -C ../tools svn2revisioninc$(EXEEXT)
+ifeq ($(wildcard ../tools/svn2revisioninc$(EXEEXT)),) 
+	$(MAKE) -C ../tools svn2revisioninc$(EXEEXT) OPT=""
+endif
 	../tools/svn2revisioninc$(EXEEXT) .. revision.inc
 ifeq ($(OS_TARGET), win32)
         $(MAKE) lazarus.res
