converted runparam dialog to lfm  from Darius
 SVN 7941@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -948,6 +948,8 @@ ide/publishprojectdlg.lfm svneol=native#text/plain
 ide/publishprojectdlg.lrs svneol=native#text/pascal
 ide/publishprojectdlg.pas svneol=native#text/pascal
 ide/revision.inc svneol=native#text/plain
+ide/runparamsopts.lfm svneol=native#text/plain
+ide/runparamsopts.lrs svneol=native#text/plain
 ide/runparamsopts.pas svneol=native#text/pascal
 ide/searchresultview.lfm svneol=native#text/plain
 ide/searchresultview.lrs svneol=native#text/pascal
