--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -22,7 +22,8 @@ unitdir=../lcl/units/$(CPU_TARGET)-$(OS_TARGET) \
         ../components/custom \
         ../components/mpaslex \
         ../ideintf/units/$(CPU_TARGET)-$(OS_TARGET) \
-        ../designer ../designer/units ../debugger \
+        ../designer ../designer/jitform/units/$(CPU_TARGET)-$(OS_TARGET) \
+        ../debugger \
         ../packager \
         ../packager/units/$(CPU_TARGET)-$(OS_TARGET) \
         .
