made start compiler configurable, fixes for use of svn2revisioninc
 SVN 7943@trunk

--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -28,8 +28,8 @@ MAKEOPTS="-Fl/opt/gnome/lib"
 if [ -n "$FPCCfg" ]; then
   MAKEOPTS="$MAKEOPTS -n @$FPCCfg"
 fi
-make all OPT="$MAKEOPTS"
-make tools
+make all OPT="$MAKEOPTS" USESVN2REVISIONINC=0
+make tools OPT="$MAKEOPTS"
 strip lazarus
 strip startlazarus
 
