--- a/tools/install/rpm/fpc.spec.template
+++ b/tools/install/rpm/fpc.spec.template
@@ -66,8 +66,10 @@ cp -a packages fpcsrc
 rm -rf packages/extra/amunits
 rm -rf packages/extra/winunits
 
-STARTPP=`which %{ppcname}`
+if [ -z "$STARTPP" ]; then
+  STARTPP=`which %{ppcname}`
 # STARTPP=/usr/local/bin/ppc386
+fi
 NEWPP=`pwd`/compiler/%{ppcname}
 NEWFPDOC=`pwd`/utils/fpdoc/fpdoc
 DATA2INC=`pwd`/utils/data2inc
