--- a/.gitattributes
+++ b/.gitattributes
@@ -1400,7 +1400,7 @@ languages/lazaruside.po svneol=native#text/plain
 languages/lazaruside.ru.po svneol=native#text/plain
 languages/lazaruside.ruutf.po svneol=native#text/plain
 languages/lazaruside.ruwin.po svneol=native#text/plain
-languages/lazaruside.uk.po svneol=native#text/plain
+languages/lazaruside.ua.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
@@ -1418,7 +1418,7 @@ languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ruutf.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
-languages/objinspstrconsts.uk.po svneol=native#text/plain
+languages/objinspstrconsts.ua.po svneol=native#text/plain
 lcl/LAYOUT.txt svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
