--- a/.gitattributes
+++ b/.gitattributes
@@ -626,6 +626,11 @@ examples/address_book/mybook.dbf svneol=native#unset
 examples/address_book/mybook.mdx svneol=native#unset
 examples/address_book/mybook2.dbf svneol=native#unset
 examples/address_book/mybook2.mdx svneol=native#unset
+examples/autosize/childsizinglayout/childsizinglayout.lpi svneol=native#text/plain
+examples/autosize/childsizinglayout/childsizinglayout.lpr svneol=native#text/plain
+examples/autosize/childsizinglayout/mainunit.lfm svneol=native#text/plain
+examples/autosize/childsizinglayout/mainunit.lrs svneol=native#text/plain
+examples/autosize/childsizinglayout/mainunit.pas svneol=native#text/plain
 examples/barchart/chartdemo.lpi svneol=native#text/plain
 examples/barchart/chartdemo.lpr svneol=native#text/pascal
 examples/barchart/frmmain.lfm svneol=native#text/plain
