--- a/.gitattributes
+++ b/.gitattributes
@@ -1883,6 +1883,7 @@ lcl/languages/lcl.fiwin.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.itiso.po svneol=native#text/plain
+lcl/languages/lcl.nl.po svneol=native#text/plain
 lcl/languages/lcl.pl.po svneol=native#text/plain
 lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
