--- a/.gitattributes
+++ b/.gitattributes
@@ -45,6 +45,7 @@ components/codetools/languages/codetools.po svneol=native#text/plain
 components/codetools/languages/codetools.ru.po svneol=native#text/plain
 components/codetools/languages/codetools.ruutf.po svneol=native#text/plain
 components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
+components/codetools/languages/codetools.ua.po svneol=native#text/plain
 components/codetools/laz_dom.pas svneol=native#text/pascal
 components/codetools/laz_xmlcfg.pas svneol=native#text/pascal
 components/codetools/laz_xmlread.pas svneol=native#text/pascal
@@ -306,6 +307,7 @@ components/synedit/languages/synedit.po svneol=native#text/plain
 components/synedit/languages/synedit.ru.po svneol=native#text/plain
 components/synedit/languages/synedit.ruutf.po svneol=native#text/plain
 components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
+components/synedit/languages/synedit.ua.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
@@ -318,6 +320,7 @@ components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruutf.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.ua.po svneol=native#text/plain
 components/synedit/syncompletion.pas svneol=native#text/pascal
 components/synedit/synedit.inc svneol=native#text/pascal
 components/synedit/synedit.pp svneol=native#text/pascal
