--- a/examples/autosize/childsizinglayout/childsizinglayout.lpi
+++ b/examples/autosize/childsizinglayout/childsizinglayout.lpi
@@ -7,82 +7,114 @@
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="5"/>
     </General>
-    <Units Count="9">
+    <Units Count="13">
       <Unit0>
         <Filename Value="childsizinglayout.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ChildSizingLayout"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="52"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="1" Y="60"/>
+        <CursorPos X="15" Y="65"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainunit.pas"/>
         <ComponentName Value="ChildsizingLayoutDemoForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainunit.lrs"/>
-        <TopLine Value="36"/>
+        <TopLine Value="39"/>
         <UnitName Value="MainUnit"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="52"/>
       </Unit1>
       <Unit2>
-        <CursorPos X="10" Y="2692"/>
-        <EditorIndex Value="2"/>
+        <CursorPos X="22" Y="2654"/>
+        <EditorIndex Value="3"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
         <Loaded Value="True"/>
-        <TopLine Value="2677"/>
+        <TopLine Value="2627"/>
         <UnitName Value="Controls"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="25"/>
       </Unit2>
       <Unit3>
-        <CursorPos X="21" Y="3269"/>
-        <EditorIndex Value="4"/>
+        <CursorPos X="21" Y="3769"/>
+        <EditorIndex Value="5"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
         <Loaded Value="True"/>
-        <TopLine Value="3243"/>
-        <UsageCount Value="12"/>
+        <TopLine Value="3735"/>
+        <UsageCount Value="25"/>
+        <Bookmarks Count="1">
+          <Item0 X="7" Y="52" ID="0"/>
+        </Bookmarks>
       </Unit3>
       <Unit4>
         <CursorPos X="14" Y="167"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="2"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/stdctrls.pp"/>
         <Loaded Value="True"/>
         <TopLine Value="143"/>
         <UnitName Value="StdCtrls"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="25"/>
       </Unit4>
       <Unit5>
         <CursorPos X="2" Y="846"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/designer/anchoreditor.pas"/>
         <TopLine Value="822"/>
         <UnitName Value="AnchorEditor"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="10"/>
       </Unit5>
       <Unit6>
-        <CursorPos X="3" Y="43"/>
-        <EditorIndex Value="3"/>
+        <CursorPos X="32" Y="2016"/>
+        <EditorIndex Value="4"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/control.inc"/>
         <Loaded Value="True"/>
-        <TopLine Value="30"/>
-        <UsageCount Value="11"/>
+        <TopLine Value="2013"/>
+        <UsageCount Value="25"/>
       </Unit6>
       <Unit7>
         <CursorPos X="33" Y="40"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/rtticontrols/rttigrids.pas"/>
         <TopLine Value="16"/>
         <UnitName Value="RTTIGrids"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="8"/>
       </Unit7>
       <Unit8>
         <CursorPos X="22" Y="485"/>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/ideintf/objectinspector.pp"/>
         <TopLine Value="451"/>
         <UnitName Value="ObjectInspector"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="8"/>
       </Unit8>
+      <Unit9>
+        <CursorPos X="3" Y="952"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/lcltype.pp"/>
+        <TopLine Value="928"/>
+        <UnitName Value="LCLType"/>
+        <UsageCount Value="11"/>
+      </Unit9>
+      <Unit10>
+        <CursorPos X="11" Y="373"/>
+        <Filename Value="/home/mattias/pascal/fpc_sources/22/fpc/rtl/inc/systemh.inc"/>
+        <TopLine Value="349"/>
+        <UsageCount Value="20"/>
+      </Unit10>
+      <Unit11>
+        <CursorPos X="1" Y="65"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/tools/install/rpm/lazarus.spec.template"/>
+        <SyntaxHighlighter Value="None"/>
+        <TopLine Value="23"/>
+        <UsageCount Value="10"/>
+      </Unit11>
+      <Unit12>
+        <CursorPos X="14" Y="573"/>
+        <EditorIndex Value="1"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/forms.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="549"/>
+        <UnitName Value="Forms"/>
+        <UsageCount Value="10"/>
+      </Unit12>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -107,124 +139,124 @@
     </RequiredPackages>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="60" Column="14" TopLine="35"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="602" Column="11" TopLine="577"/>
       </Position1>
       <Position2>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="35" Column="24" TopLine="35"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="609" Column="7" TopLine="585"/>
       </Position2>
       <Position3>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="41" Column="34" TopLine="35"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="619" Column="31" TopLine="585"/>
       </Position3>
       <Position4>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="40" Column="43" TopLine="35"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="613" Column="70" TopLine="589"/>
       </Position4>
       <Position5>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="60" Column="9" TopLine="29"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="624" Column="79" TopLine="600"/>
       </Position5>
       <Position6>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="41" Column="32" TopLine="17"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="625" Column="1" TopLine="600"/>
       </Position6>
       <Position7>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="46" Column="7" TopLine="17"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="631" Column="81" TopLine="607"/>
       </Position7>
       <Position8>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="40" Column="43" TopLine="17"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="648" Column="17" TopLine="624"/>
       </Position8>
       <Position9>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="36" Column="24" TopLine="17"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="649" Column="18" TopLine="624"/>
       </Position9>
       <Position10>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="48" Column="17" TopLine="33"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="660" Column="16" TopLine="636"/>
       </Position10>
       <Position11>
-        <Filename Value="mainunit.pas"/>
-        <Caret Line="80" Column="39" TopLine="36"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="662" Column="55" TopLine="636"/>
       </Position11>
       <Position12>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
-        <Caret Line="1306" Column="33" TopLine="1283"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="682" Column="16" TopLine="658"/>
       </Position12>
       <Position13>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="1052" Column="3" TopLine="1047"/>
+        <Caret Line="684" Column="1" TopLine="658"/>
       </Position13>
       <Position14>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3119" Column="13" TopLine="3095"/>
+        <Caret Line="1471" Column="54" TopLine="1447"/>
       </Position14>
       <Position15>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Caret Line="1475" Column="1" TopLine="1447"/>
       </Position15>
       <Position16>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3099" Column="13" TopLine="3074"/>
+        <Caret Line="3753" Column="9" TopLine="3729"/>
       </Position16>
       <Position17>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3119" Column="13" TopLine="3095"/>
+        <Caret Line="3747" Column="14" TopLine="3729"/>
       </Position17>
       <Position18>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3120" Column="36" TopLine="3096"/>
+        <Caret Line="3759" Column="12" TopLine="3735"/>
       </Position18>
       <Position19>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3121" Column="15" TopLine="3097"/>
+        <Caret Line="3749" Column="5" TopLine="3725"/>
       </Position19>
       <Position20>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3123" Column="67" TopLine="3098"/>
+        <Caret Line="3755" Column="1" TopLine="3725"/>
       </Position20>
       <Position21>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3125" Column="68" TopLine="3100"/>
+        <Caret Line="3767" Column="7" TopLine="3743"/>
       </Position21>
       <Position22>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3128" Column="58" TopLine="3103"/>
+        <Caret Line="3756" Column="21" TopLine="3743"/>
       </Position22>
       <Position23>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3130" Column="61" TopLine="3105"/>
+        <Caret Line="3768" Column="7" TopLine="3743"/>
       </Position23>
       <Position24>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3135" Column="32" TopLine="3110"/>
+        <Caret Line="3773" Column="5" TopLine="3749"/>
       </Position24>
       <Position25>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3155" Column="32" TopLine="3130"/>
+        <Caret Line="3757" Column="24" TopLine="3749"/>
       </Position25>
       <Position26>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="3266" Column="32" TopLine="3242"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
+        <Caret Line="844" Column="15" TopLine="820"/>
       </Position26>
       <Position27>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
+        <Caret Line="2651" Column="23" TopLine="2627"/>
       </Position27>
       <Position28>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
-        <Caret Line="1295" Column="17" TopLine="1282"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="3774" Column="5" TopLine="3749"/>
       </Position28>
       <Position29>
         <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
-        <Caret Line="2678" Column="48" TopLine="2654"/>
+        <Caret Line="2651" Column="23" TopLine="2627"/>
       </Position29>
       <Position30>
-        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
-        <Caret Line="2701" Column="12" TopLine="2677"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/include/wincontrol.inc"/>
+        <Caret Line="3770" Column="1" TopLine="3746"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
