--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -44,7 +44,8 @@ cp -a lazarus/* %{buildroot}%{_libdir}/%{name}/
   install -m 644 lazarus/images/ide_icon48x48.png %{buildroot}%{_datadir}/pixmaps/lazarus.png
 #  install -m 644 lazarus/gnome.ide.desktop %{buildroot}%{_datadir}/gnome/apps/Development/lazarus.desktop
   install -m 644 lazarus/install/gnome.ide.desktop %{buildroot}%{_datadir}/applications/lazarus.desktop
-ln -sf ../%{_lib}/%{name}/%{name} %{buildroot}%{_bindir}/%{name}
+ln -sf ../%{_lib}/%{name}/lazarus %{buildroot}%{_bindir}/lazarus
+ln -sf ../%{_lib}/%{name}/startlazarus %{buildroot}%{_bindir}/startlazarus
 
 %clean
 [ %{buildroot} != "/" ] && ( rm -rf %{buildroot} )
