--- a/components/rtticontrols/examples/exampleproject3.lpi
+++ b/components/rtticontrols/examples/exampleproject3.lpi
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <PathDelim Value="/"/>
     <Version Value="5"/>
     <General>
       <Flags>
@@ -8,10 +9,10 @@
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="exampleproject3"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <Units Count="2">
       <Unit0>
@@ -21,7 +22,7 @@
         <UsageCount Value="23"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="18" Y="106"/>
+        <CursorPos X="11" Y="111"/>
         <EditorIndex Value="0"/>
         <Filename Value="example3.pas"/>
         <ComponentName Value="Form1"/>
@@ -55,7 +56,7 @@
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="3"/>
+    <Version Value="5"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
