updated Ukrainian translations   from Evgen Palamarchuck and Taras Boychuk
 SVN 8006@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1890,6 +1890,7 @@ lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ruutf.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
+lcl/languages/lcl.ua.po svneol=native#text/plain
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
 lcl/lclicons.lrs svneol=native#text/pascal
