example for font enumeration
 SVN 8041@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -680,6 +680,11 @@ examples/exploremenu/exploreidemenu.pas svneol=native#text/plain
 examples/exploremenu/frmexploremenu.lfm svneol=native#text/plain
 examples/exploremenu/frmexploremenu.lrs svneol=native#text/plain
 examples/exploremenu/frmexploremenu.pas svneol=native#text/plain
+examples/fontenum/fontenumeration.lpi svneol=native#text/plain
+examples/fontenum/fontenumeration.lpr svneol=native#text/pascal
+examples/fontenum/mainunit.lfm svneol=native#text/plain
+examples/fontenum/mainunit.lrs svneol=native#text/plain
+examples/fontenum/mainunit.pas svneol=native#text/pascal
 examples/grid_semaphor/TSemaphorDBGrid.xpm -text svneol=native#image/x-xpixmap
 examples/grid_semaphor/example/project1.lpi svneol=native#text/plain
 examples/grid_semaphor/example/project1.lpr svneol=native#text/pascal
