--- a/.gitattributes
+++ b/.gitattributes
@@ -984,6 +984,8 @@ ide/transfermacros.pp svneol=native#text/pascal
 ide/translations.pas svneol=native#text/pascal
 ide/unitdependencies.lrs svneol=native#text/pascal
 ide/unitdependencies.pas svneol=native#text/pascal
+ide/uniteditor.lfm svneol=native#text/plain
+ide/uniteditor.lrs svneol=native#text/plain
 ide/uniteditor.pp svneol=native#text/pascal
 ide/unitinfodlg.pp svneol=native#text/pascal
 ide/viewforms1.lrs svneol=native#text/pascal
