started wince interface
 SVN 8053@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1881,6 +1881,17 @@ lcl/interfaces/win32/win32wsspin.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wstoolwin.pp svneol=native#text/pascal
 lcl/interfaces/win32/winext.pas svneol=native#text/pascal
+lcl/interfaces/wince/Makefile svneol=native#text/plain
+lcl/interfaces/wince/Makefile.fpc svneol=native#text/plain
+lcl/interfaces/wince/interfaces.pp svneol=native#text/plain
+lcl/interfaces/wince/winceint.pp svneol=native#text/plain
+lcl/interfaces/wince/wincelclintf.inc svneol=native#text/plain
+lcl/interfaces/wince/wincelclintfh.inc svneol=native#text/plain
+lcl/interfaces/wince/winceobject.inc svneol=native#text/plain
+lcl/interfaces/wince/wincewinapi.inc svneol=native#text/plain
+lcl/interfaces/wince/wincewinapih.inc svneol=native#text/plain
+lcl/interfaces/wince/wincewscontrols.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewsforms.pp svneol=native#text/plain
 lcl/intfgraphics.pas svneol=native#text/pascal
 lcl/languages/lcl.ca.po svneol=native#text/plain
 lcl/languages/lcl.de.po svneol=native#text/plain
