--- a/.gitattributes
+++ b/.gitattributes
@@ -833,6 +833,9 @@ ide/codeexplopts.pas svneol=native#text/pascal
 ide/codeexplorer.lfm svneol=native#text/plain
 ide/codeexplorer.lrs svneol=native#text/pascal
 ide/codeexplorer.pas svneol=native#text/pascal
+ide/codemacroprompt.lfm svneol=native#text/plain
+ide/codemacroprompt.lrs svneol=native#text/plain
+ide/codemacroprompt.pas svneol=native#text/plain
 ide/codetemplatesdlg.lfm svneol=native#text/plain
 ide/codetemplatesdlg.lrs svneol=native#text/plain
 ide/codetemplatesdlg.pas svneol=native#text/pascal
