--- a/.gitattributes
+++ b/.gitattributes
@@ -827,6 +827,9 @@ ide/cleandirdlg.lfm svneol=native#text/plain
 ide/cleandirdlg.lrs svneol=native#text/pascal
 ide/cleandirdlg.pas svneol=native#text/pascal
 ide/clipboardhistory.pas svneol=native#text/pascal
+ide/codecontextform.lfm svneol=native#text/plain
+ide/codecontextform.lrs svneol=native#text/plain
+ide/codecontextform.pas svneol=native#text/plain
 ide/codeexplopts.lfm svneol=native#text/plain
 ide/codeexplopts.lrs svneol=native#text/pascal
 ide/codeexplopts.pas svneol=native#text/pascal
