started IDE code macro selector
 SVN 8100@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -839,6 +839,9 @@ ide/codeexplorer.pas svneol=native#text/pascal
 ide/codemacroprompt.lfm svneol=native#text/plain
 ide/codemacroprompt.lrs svneol=native#text/plain
 ide/codemacroprompt.pas svneol=native#text/plain
+ide/codemacroselect.lfm svneol=native#text/plain
+ide/codemacroselect.lrs svneol=native#text/plain
+ide/codemacroselect.pas svneol=native#text/plain
 ide/codetemplatesdlg.lfm svneol=native#text/plain
 ide/codetemplatesdlg.lrs svneol=native#text/plain
 ide/codetemplatesdlg.pas svneol=native#text/pascal
