--- a/.gitattributes
+++ b/.gitattributes
@@ -42,7 +42,7 @@ components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.pliso.po svneol=native#text/plain
 components/codetools/languages/codetools.plwin.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
-components/codetools/languages/codetools.ru.po svneol=native#text/plain
+components/codetools/languages/codetools.ruold.po svneol=native#text/plain
 components/codetools/languages/codetools.ruutf.po svneol=native#text/plain
 components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
 components/codetools/languages/codetools.ua.po svneol=native#text/plain
@@ -303,7 +303,7 @@ components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.pliso.po svneol=native#text/plain
 components/synedit/languages/synedit.plwin.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
-components/synedit/languages/synedit.ru.po svneol=native#text/plain
+components/synedit/languages/synedit.ruold.po svneol=native#text/plain
 components/synedit/languages/synedit.ruutf.po svneol=native#text/plain
 components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
 components/synedit/languages/synedit.ua.po svneol=native#text/plain
@@ -316,7 +316,7 @@ components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
-components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.ruold.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruutf.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ua.po svneol=native#text/plain
@@ -1419,7 +1419,7 @@ languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
-languages/lazaruside.ru.po svneol=native#text/plain
+languages/lazaruside.ruold.po svneol=native#text/plain
 languages/lazaruside.ruutf.po svneol=native#text/plain
 languages/lazaruside.ruwin.po svneol=native#text/plain
 languages/lazaruside.ua.po svneol=native#text/plain
@@ -1436,7 +1436,7 @@ languages/objinspstrconsts.pl.po svneol=native#text/plain
 languages/objinspstrconsts.pliso.po svneol=native#text/plain
 languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
-languages/objinspstrconsts.ru.po svneol=native#text/plain
+languages/objinspstrconsts.ruold.po svneol=native#text/plain
 languages/objinspstrconsts.ruutf.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
 languages/objinspstrconsts.ua.po svneol=native#text/plain
@@ -1914,7 +1914,7 @@ lcl/languages/lcl.pl.po svneol=native#text/plain
 lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
-lcl/languages/lcl.ru.po svneol=native#text/plain
+lcl/languages/lcl.ruold.po svneol=native#text/plain
 lcl/languages/lcl.ruutf.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
