--- a/.gitattributes
+++ b/.gitattributes
@@ -42,8 +42,8 @@ components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.pliso.po svneol=native#text/plain
 components/codetools/languages/codetools.plwin.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
+components/codetools/languages/codetools.ru.po svneol=native#text/plain
 components/codetools/languages/codetools.ruold.po svneol=native#text/plain
-components/codetools/languages/codetools.ruutf.po svneol=native#text/plain
 components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
 components/codetools/languages/codetools.ua.po svneol=native#text/plain
 components/codetools/laz_dom.pas svneol=native#text/pascal
@@ -303,8 +303,8 @@ components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.pliso.po svneol=native#text/plain
 components/synedit/languages/synedit.plwin.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
+components/synedit/languages/synedit.ru.po svneol=native#text/plain
 components/synedit/languages/synedit.ruold.po svneol=native#text/plain
-components/synedit/languages/synedit.ruutf.po svneol=native#text/plain
 components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
 components/synedit/languages/synedit.ua.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
@@ -316,8 +316,8 @@ components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruold.po svneol=native#text/plain
-components/synedit/languages/synmacrorecorder.ruutf.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ua.po svneol=native#text/plain
 components/synedit/syncompletion.pas svneol=native#text/pascal
@@ -1419,8 +1419,8 @@ languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
+languages/lazaruside.ru.po svneol=native#text/plain
 languages/lazaruside.ruold.po svneol=native#text/plain
-languages/lazaruside.ruutf.po svneol=native#text/plain
 languages/lazaruside.ruwin.po svneol=native#text/plain
 languages/lazaruside.ua.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
@@ -1436,8 +1436,8 @@ languages/objinspstrconsts.pl.po svneol=native#text/plain
 languages/objinspstrconsts.pliso.po svneol=native#text/plain
 languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
+languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ruold.po svneol=native#text/plain
-languages/objinspstrconsts.ruutf.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
 languages/objinspstrconsts.ua.po svneol=native#text/plain
 lcl/LAYOUT.txt svneol=native#text/plain
@@ -1914,8 +1914,8 @@ lcl/languages/lcl.pl.po svneol=native#text/plain
 lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
+lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ruold.po svneol=native#text/plain
-lcl/languages/lcl.ruutf.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
 lcl/lazlinkedlist.pas svneol=native#text/pascal
