started IDE progress dialog and splitted project sessions
 SVN 8120@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -958,6 +958,9 @@ ide/newprojectdlg.pp svneol=native#text/pascal
 ide/objectlists.pas svneol=native#text/pascal
 ide/outputfilter.pas svneol=native#text/pascal
 ide/patheditordlg.pas svneol=native#text/pascal
+ide/progressdlg.lfm svneol=native#text/plain
+ide/progressdlg.lrs svneol=native#text/plain
+ide/progressdlg.pas svneol=native#text/plain
 ide/project.pp svneol=native#text/pascal
 ide/projectdefs.pas svneol=native#text/pascal
 ide/projectinspector.pas svneol=native#text/pascal
