- moved some of the translations code to the lcl - use GetLanguageIDs from GetText instead of LazConf
 SVN 8124@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -905,6 +905,7 @@ ide/idedefs.pas svneol=native#text/pascal
 ide/ideoptiondefs.pas svneol=native#text/pascal
 ide/ideprocs.pp svneol=native#text/pascal
 ide/ideprotocol.pas svneol=native#text/pascal
+ide/idetranslations.pas svneol=native#text/pascal
 ide/imexportcompileropts.lfm svneol=native#text/plain
 ide/imexportcompileropts.lrs svneol=native#text/pascal
 ide/imexportcompileropts.pas svneol=native#text/pascal
@@ -993,7 +994,6 @@ ide/startlazopts.pas svneol=native#text/pascal
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/todolist.pp svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
-ide/translations.pas svneol=native#text/pascal
 ide/unitdependencies.lrs svneol=native#text/pascal
 ide/unitdependencies.pas svneol=native#text/pascal
 ide/uniteditor.lfm svneol=native#text/plain
@@ -1963,6 +1963,7 @@ lcl/tests/test2_2labelattributes.lpi svneol=native#text/plain
 lcl/tests/test2_2labelattributes.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
+lcl/translations.pas svneol=native#text/pascal
 lcl/units/CONTENT.txt svneol=native#text/plain
 lcl/utrace.pp svneol=native#text/pascal
 lcl/widgetset/wsactnlist.pp svneol=native#text/pascal
