fixed linux compilation, fixed codetools searching class header comment
 SVN 8127@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -931,7 +931,6 @@ ide/lazarus_dci.lrs svneol=native#text/pascal
 ide/lazarusidestrconsts.pas svneol=native#text/pascal
 ide/lazarusmanager.pas svneol=native#text/pascal
 ide/lazconf.pp svneol=native#text/pascal
-ide/lazcwstring.pas svneol=native#text/plain
 ide/lazdocfrm.lfm svneol=native#text/plain
 ide/lazdocfrm.lrs svneol=native#text/plain
 ide/lazdocfrm.pas svneol=native#text/plain
@@ -1921,6 +1920,7 @@ lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ruold.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
+lcl/lazcwstring.pas svneol=native#text/plain
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
 lcl/lclicons.lrs svneol=native#text/pascal
