IDE now extends/clean up project unit path on renaming a project unit
 SVN 8168@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1931,6 +1931,10 @@ lcl/lclproc.pas svneol=native#text/pascal
 lcl/lclrescache.pas svneol=native#text/pascal
 lcl/lclstrconsts.pas svneol=native#text/pascal
 lcl/lcltype.pp svneol=native#text/pascal
+lcl/ldockctrl.pas svneol=native#text/plain
+lcl/ldockctrledit.lfm svneol=native#text/plain
+lcl/ldockctrledit.lrs svneol=native#text/plain
+lcl/ldockctrledit.pas svneol=native#text/plain
 lcl/ldocktree.pas svneol=native#text/pascal
 lcl/lmessages.pp svneol=native#text/pascal
 lcl/lresources.pp svneol=native#text/pascal
