--- a/.gitattributes
+++ b/.gitattributes
@@ -598,6 +598,7 @@ docs/xml/lcl/lclproc.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclrescache.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclstrconsts.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lcltype.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/ldockctrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/ldocktree.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lmessages.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lresources.xml svneol=LF#text/xml eol=lf
