added missing files
 SVN 8199@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1725,6 +1725,8 @@ lcl/interfaces/gtk/gtkcallback.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtkcomboboxcallback.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtkdef.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkdragcallback.inc svneol=native#text/pascal
+lcl/interfaces/gtk/gtkfiledialogutils.inc svneol=native#text/plain
+lcl/interfaces/gtk/gtkfiledialogutilsh.inc svneol=native#text/plain
 lcl/interfaces/gtk/gtkfontcache.pas svneol=native#text/pascal
 lcl/interfaces/gtk/gtkglobals.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkimages.lrs svneol=native#text/pascal
