--- a/examples/listview/listview.lpi
+++ b/examples/listview/listview.lpi
@@ -1,16 +1,20 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="\"/>
+    <PathDelim Value="/"/>
     <Version Value="5"/>
     <General>
+      <Flags>
+        <SaveClosedFiles Value="False"/>
+        <SaveOnlyProjectUnits Value="True"/>
+      </Flags>
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
-      <ActiveEditorIndexAtStart Value="2"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <LazDoc Paths=""/>
-    <Units Count="4">
+    <Units Count="2">
       <Unit0>
         <CursorPos X="28" Y="11"/>
         <EditorIndex Value="0"/>
@@ -22,16 +26,7 @@
         <UsageCount Value="20"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="17" Y="11"/>
-        <Filename Value="unit1.pas"/>
-        <ComponentName Value="Form1"/>
-        <ResourceFilename Value="unit1.lrs"/>
-        <TopLine Value="1"/>
-        <UnitName Value="Unit1"/>
-        <UsageCount Value="20"/>
-      </Unit1>
-      <Unit2>
-        <CursorPos X="15" Y="88"/>
+        <CursorPos X="23" Y="99"/>
         <EditorIndex Value="1"/>
         <Filename Value="testform.pp"/>
         <ComponentName Value="Form1"/>
@@ -42,15 +37,7 @@
         <TopLine Value="67"/>
         <UnitName Value="testform"/>
         <UsageCount Value="20"/>
-      </Unit2>
-      <Unit3>
-        <CursorPos X="1" Y="1130"/>
-        <EditorIndex Value="2"/>
-        <Filename Value="C:\lazarus\lcl\include\imglist.inc"/>
-        <Loaded Value="True"/>
-        <TopLine Value="1109"/>
-        <UsageCount Value="10"/>
-      </Unit3>
+      </Unit1>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -69,18 +56,11 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <JumpHistory Count="1" HistoryIndex="0">
-      <Position1>
-        <Filename Value="testform.pp"/>
-        <Caret Line="88" Column="15" TopLine="67"/>
-      </Position1>
-    </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
-    <PathDelim Value="\"/>
     <SearchPaths>
-      <SrcPath Value="$(LazarusDir)\lcl\;$(LazarusDir)\lcl\interfaces\$(LCLWidgetType)\"/>
+      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
@@ -99,15 +79,15 @@
   <Debugging>
     <BreakPoints Count="3">
       <Item1>
-        <Source Value="C:\lazarus\components\synedit\synedit.pp"/>
+        <Source Value="C:/lazarus/components/synedit/synedit.pp"/>
         <Line Value="2767"/>
       </Item1>
       <Item2>
-        <Source Value="C:\Datamodeler\contrib\jedimath\Source\JmFit.pas"/>
+        <Source Value="C:/Datamodeler/contrib/jedimath/Source/JmFit.pas"/>
         <Line Value="134"/>
       </Item2>
       <Item3>
-        <Source Value="C:\Datamodeler\contrib\jedimath\Source\JmFit.pas"/>
+        <Source Value="C:/Datamodeler/contrib/jedimath/Source/JmFit.pas"/>
         <Line Value="147"/>
       </Item3>
     </BreakPoints>
