tpipro example update
 SVN 8228@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -798,7 +798,8 @@ examples/treeview/tv_add_remove.lpi svneol=native#text/plain
 examples/treeview/tv_add_remove_u1.lfm svneol=native#text/plain
 examples/treeview/tv_add_remove_u1.lrs svneol=native#text/pascal
 examples/treeview/tv_add_remove_u1.pas svneol=native#text/pascal
-examples/turbopower_ipro/imagebroken.xpm -text svneol=native#image/x-xpixmap
+examples/turbopower_ipro/defaultimage.lrs svneol=native#text/pascal
+examples/turbopower_ipro/defaultimage.xpm -text svneol=native#image/x-pixmap
 examples/turbopower_ipro/index.html svneol=native#text/html
 examples/turbopower_ipro/mainunit.lfm svneol=native#text/plain
 examples/turbopower_ipro/mainunit.lrs svneol=native#text/pascal
