Fixes issues 1443,1445 and TPageSetupDialog from Boguslaw Brandys
 SVN 8250@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -153,6 +153,7 @@ components/prettyformat/ptopu.pp svneol=native#text/plain
 components/printers/linux/cupsdyn.pp svneol=native#text/pascal
 components/printers/linux/cupsprinters.inc svneol=native#text/pascal
 components/printers/linux/cupsprinters_h.inc svneol=native#text/pascal
+components/printers/linux/cupsprndialogs.inc svneol=native#text/pascal
 components/printers/linux/jobsimglist.lrs svneol=native#text/pascal
 components/printers/linux/printerprop.lrs svneol=native#text/pascal
 components/printers/linux/selectprinter.lrs svneol=native#text/pascal
@@ -178,6 +179,7 @@ components/printers/sample/selectprinter.lpi svneol=native#text/plain
 components/printers/sample/selectprinter.lpr svneol=native#text/pascal
 components/printers/win32/winprinters.inc svneol=native#text/pascal
 components/printers/win32/winprinters_h.inc svneol=native#text/pascal
+components/printers/win32/winprndialogs.inc svneol=native#text/pascal
 components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/projecttemplates/README svneol=native#text/plain
