fixed ipro flicker in win32 and added ipro print preview
 SVN 8302@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -376,6 +376,8 @@ components/turbopower_ipro/ipdefct.inc svneol=native#text/pascal
 components/turbopower_ipro/ipdefine.inc svneol=native#text/pascal
 components/turbopower_ipro/iphtml.lrs svneol=native#text/pascal
 components/turbopower_ipro/iphtml.pas svneol=native#text/pascal
+components/turbopower_ipro/iphtmlpv.lfm svneol=native#text/plain
+components/turbopower_ipro/iphtmlpv.lrs svneol=native#text/pascal
 components/turbopower_ipro/iphtmlpv.pas svneol=native#text/pascal
 components/turbopower_ipro/ipmsg.pas svneol=native#text/pascal
 components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
